--- a/scss/main.scss
+++ b/scss/main.scss
@@ -36,12 +36,14 @@
       font-family: 'Bebas Neue', sans-serif;
       text-align: center;
       background: linear-gradient(#5599ff, #1a1c2b);
-      animation: moveText 5s linear infinite;
+      overflow: hidden;
+
     }
     h1{
-        
         font-family: 'Bebas Neue', sans-serif;
-          
+    }
+    h2{
+      animation: moveText 5s linear infinite;
     }
   }
   
